build_error.log
    Checking darkcore-greenluma v0.1.0 (E:\Programmi VARI\STEAM h4cks\GREEN LUMA\DARKCORE-GREENLUMA\darkcore-rust)
warning: unused import: `walkdir::WalkDir`
 --> src\app_list.rs:5:5
  |
5 | use walkdir::WalkDir;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::path::PathBuf`
 --> src\cache.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `as_flat_slice` found for struct `ImageBuffer<image::Rgba<u8>, std::vec::Vec<u8>>` in the current scope
   --> src\ui.rs:266:71
    |
266 | ...                   let pixels = image_buffer.as_flat_slice();
    |                                                 ^^^^^^^^^^^^^
    |
help: there is a method `as_slice` with a similar name
    |
266 -                                             let pixels = image_buffer.as_flat_slice();
266 +                                             let pixels = image_buffer.as_slice();
    |

warning: unused variable: `image`
   --> src\ui.rs:193:56
    |
193 | ...                   if let Ok(image) = image::load_from_memory(&bytes) {
    |                                 ^^^^^ help: if this is intentional, prefix it with an underscore: `_image`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `cache`
   --> src\ui.rs:185:38
    |
185 | ...                   let cache = cover_cache.clone();
    |                           ^^^^^ help: if this is intentional, prefix it with an underscore: `_cache`

warning: unused variable: `client`
   --> src\ui.rs:153:21
    |
153 |         if let Some(client) = &self.api_client {
    |                     ^^^^^^ help: if this is intentional, prefix it with an underscore: `_client`

warning: unused variable: `client`
   --> src\ui.rs:353:13
    |
353 |         let client = ApiClient::new(client_key.clone());
    |             ^^^^^^ help: if this is intentional, prefix it with an underscore: `_client`

warning: variable does not need to be mutable
   --> src\ui.rs:749:13
    |
749 |         let mut path_row = |ui: &mut egui::Ui, label: &str, valid: bool, txt: &mut String, is_dir: bool| {
    |             ----^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `tint`
   --> src\ui.rs:752:22
    |
752 |                  let tint = if valid { egui::Color32::GREEN } else { egui::Color32::RED };
    |                      ^^^^ help: if this is intentional, prefix it with an underscore: `_tint`

For more information about this error, try `rustc --explain E0599`.
warning: `darkcore-greenluma` (bin "darkcore-greenluma") generated 8 warnings
error: could not compile `darkcore-greenluma` (bin "darkcore-greenluma") due to 1 previous error; 8 warnings emitted
